--- a/index.qmd
+++ b/index.qmd
@@ -32,7 +32,7 @@ subtitle: "3 day workshop at Hafró/MFRI in preparation for the capelin surveys"
 |            |            |                |                                                                   |
 |            |            |                | Installation of LSSS and start survey scrutinizations             |
 +------------+------------+----------------+-------------------------------------------------------------------+
-|            | 13-16      | TS, SÞJ        | Installation of LSSS and start survey scrutinizations             |
+|            | 13-16      | TS, SÞJ        | (OPTIONAL) Pratical scrutinization                                |
 +------------+------------+----------------+-------------------------------------------------------------------+
 | 2025-12-05 | 9:00-9:30  | TS             | Presentation: When to sample during the capelin surveys!          |
 +------------+------------+----------------+-------------------------------------------------------------------+
@@ -77,7 +77,11 @@ Sigurvin & Siggi
 
 ### 3rd day Dec 5
 
-Teresa - When to sample during the capelin surveys! - Continuation with the scrutinization
+Teresa
+
+\- When to sample during the capelin surveys!
+
+\- Continuation with the scrutinization
 
 [Teresa's slides](materials/monday/teresa/Post-processing_LSSS_teresa_Silva.pptx) and [simple demo](materials/monday/teresa/SimpleDemo.zip).
 
