--- a/TS_presentation_5thDec.qmd
+++ b/TS_presentation_5thDec.qmd
@@ -1,5 +1,752 @@
 ---
-title: "When to take a sample"
-author: "Teresa"
-format: revealjs
+title: "When to Sample Icelandic Capelin"
+subtitle: "Timing Acoustic Surveys for Stock Assessment"
+author: "Teresa Silva and Sigurður Þ Jónsson"
+date: "December 5, 2024"
+format: 
+  revealjs:
+    theme: simple
+    slide-number: true
+    transition: slide
+    background-transition: fade
 ---
+
+## Introduction {.smaller}
+
+**Why Capelin Survey Timing is Critical**
+
+- Capelin (*Mallotus villosus*) - keystone forage fish in North Atlantic
+- Highly variable stock with boom-bust dynamics
+- Critical prey for cod, haddock, seabirds, and marine mammals
+
+::: {.fragment}
+**The Challenge:** Capelin are highly mobile with complex seasonal migrations
+
+**The Question:** When and where should we sample to get reliable abundance estimates?
+:::
+
+::: {.notes}
+Capelin timing is particularly critical because of their role in the ecosystem and the short assessment timeline needed for management decisions.
+:::
+
+---
+
+## Capelin Life Cycle
+
+![](images/capelin_life_cycle.png){fig-align="center" width="80%"}
+
+**Annual Cycle:**
+
+- **Spring (Mar-May):** Spawning migration and spawning
+- **Summer (Jun-Aug):** Feeding in open ocean
+- **Autumn (Sep-Nov):** Feeding and maturation
+- **Winter (Dec-Feb):** Pre-spawning migration begins
+
+---
+
+## The Icelandic Capelin Stock {.smaller}
+
+**Stock Characteristics**
+
+:::: {.columns}
+::: {.column width="50%"}
+- Short-lived (2-4 years)
+- Semelparous (spawn once and die)
+- Temperature-dependent distribution
+- Feeds on zooplankton (mainly copepods)
+- Spawns on south and southwest coasts
+:::
+
+::: {.column width="50%"}
+![](images/iceland_capelin_distribution.png){width="100%"}
+
+*Typical distribution areas by season*
+:::
+::::
+
+::: {.callout-important}
+Stock size varies dramatically (0.5 to 3+ million tonnes)
+:::
+
+---
+
+## Capelin Migration Patterns {.smaller}
+
+**Seasonal Movements Around Iceland**
+
+![](images/capelin_migration_map.png){fig-align="center" width="70%"}
+
+- **Summer:** North and east of Iceland (feeding)
+- **Autumn:** Widespread in Iceland-Greenland-Jan Mayen area
+- **Winter:** Migration toward spawning grounds
+- **Spring:** Concentrated on spawning grounds (south coast)
+
+::: {.fragment}
+**Key Insight:** Distribution changes dramatically throughout the year
+:::
+
+---
+
+## Survey Options: When to Sample?
+
+**Three Main Survey Windows**
+
+1. **Summer Survey (June-July)**
+   - Feeding season
+   - Dispersed distribution
+   
+2. **Autumn Survey (October)**
+   - Pre-spawning, maturing stock
+   - Moderate aggregation
+
+3. **Winter Survey (January-February)**
+   - Pre-spawning migration
+   - High aggregation
+
+---
+
+## Winter Acoustic Survey {.smaller}
+
+**The Icelandic Approach**
+
+![](images/capelin_winter_survey_track.png){fig-align="center" width="65%"}
+
+**Timing:** Mid-January to early February
+
+**Rationale:**
+
+- Capelin migrating toward spawning grounds
+- **High density aggregations** (easier to detect acoustically)
+- Stock concentrated in smaller area (more efficient coverage)
+- Mature stock (target for fishery management)
+
+---
+
+## Why Winter? Biological Advantages {.smaller}
+
+:::: {.columns}
+::: {.column width="50%"}
+**High Catchability**
+
+- Dense schools
+- Predictable migration routes
+- Shallower depths
+- Less vertical migration
+
+**Mature Stock**
+
+- Clear age structure
+- Spawning stock biomass estimate
+- Maturity assessment possible
+:::
+
+::: {.column width="50%"}
+![](images/capelin_school_echogram.png){width="100%"}
+
+*Acoustic echogram showing dense capelin schools*
+:::
+::::
+
+::: {.callout-tip}
+Spawning migration behavior makes capelin most detectable in winter
+:::
+
+---
+
+## Why Winter? Operational Advantages {.smaller}
+
+**Practical Benefits**
+
+- **Timing Aligns with Assessment Cycle**
+  - Survey in January-February
+  - Assessment in February-March
+  - TAC set before fishing season opens
+
+- **Focused Survey Area**
+  - South and southwest of Iceland
+  - Shorter survey duration (~2 weeks)
+  - Lower vessel costs
+
+- **Management Relevance**
+  - Direct measure of spawning stock
+  - Timely advice for quota setting
+
+---
+
+## The Challenge: Winter Weather {.smaller}
+
+**Operational Constraints**
+
+:::: {.columns}
+::: {.column width="50%"}
+**Weather Risks:**
+
+- Storm frequency highest
+- Short daylight hours
+- Ice conditions (some years)
+- Vessel safety concerns
+
+**Mitigation:**
+
+- Ice-strengthened research vessels
+- Flexible scheduling (weather windows)
+- Extended survey period allocation
+:::
+
+::: {.column width="50%"}
+![](images/winter_conditions_iceland.png){width="100%"}
+
+*Winter survey conditions around Iceland*
+:::
+::::
+
+---
+
+## Acoustic Detection of Capelin {.smaller}
+
+**Technical Considerations**
+
+![](images/Sine_waves_different_frequencies.png){fig-align="center" width="50%"}
+
+**Frequency Selection:**
+
+- **38 kHz:** Standard for capelin surveys
+- Good penetration and detection
+- Clear separation from other species
+
+**Challenges:**
+
+- Small target strength (small fish)
+- Dense schools can cause acoustic shadowing
+- Need to distinguish from other small pelagics (herring juveniles)
+
+---
+
+## Survey Design: Adaptive Strategy {.smaller}
+
+**Systematic Parallel Transects**
+
+![](images/capelin_transect_design.png){fig-align="center" width="65%"}
+
+**Base Design:**
+
+- East-west transects, 30 n.mi. spacing
+- Covers typical distribution area
+- Systematic coverage for abundance estimation
+
+**Adaptive Components:**
+
+- Additional transects in high-density areas
+- Extended coverage if distribution is wider than expected
+**#add figures of possible extentions **
+
+- Real-time decision making based on acoustic data
+
+---
+
+## Temperature and Capelin Distribution {.smaller}
+
+**Environmental Influence on Timing**
+
+:::: {.columns}
+::: {.column width="60%"}
+- **Cold Years:** 
+  - Later migration
+  - More southern distribution
+  - May need to extend survey south
+
+- **Warm Years:**
+  - Earlier migration
+  - More northern spawning
+  - Different spatial coverage needed
+
+**Climate Change:** Warming trend affecting timing
+:::
+
+::: {.column width="40%"}
+![](images/capelin_temperature_preference.png){width="100%"}
+
+*Temperature preferences by life stage*
+:::
+::::
+
+::: {.callout-note}
+Survey timing may need adjustment as climate changes
+:::
+
+---
+
+## Multi-Year Consistency {.smaller}
+
+**Importance of Consistent Timing**
+
+**Benefits:**
+
+- Comparable time series (1978-present)
+- Reliable trend detection
+- Reduced bias in assessment
+- Historical data valuable for modeling
+
+**Challenges:**
+
+- Weather may force delays (±1 week)
+- Stock distribution changes
+- Must balance consistency with data quality
+
+![](images/capelin_time_series.png){fig-align="center" width="60%"}
+
+*Capelin biomass estimates 1980-2024*
+
+---
+
+## Complementary Data Sources {.smaller}
+
+**Survey is Not Alone**
+
+:::: {.columns}
+::: {.column width="50%"}
+**Summer Surveys:**
+
+- Immature capelin index
+- Recruitment indicator
+- Feeding distribution
+
+**Larval Surveys:**
+
+- Spawning success
+- Post-spawning mortality
+- Early recruitment signal
+:::
+
+::: {.column width="50%"}
+**Fishery Data:**
+
+- Commercial catch locations
+- Age/maturity samples
+- Real-time distribution info
+
+**Ecosystem Monitoring:**
+
+- Predator diets
+- Zooplankton abundance
+- Ocean temperature
+:::
+::::
+
+---
+
+## Assessment Timeline {.smaller}
+
+**From Survey to Management**
+
+```
+January-February:  Winter Acoustic Survey
+        ↓
+February:          Data processing and QC
+        ↓
+March:             Stock Assessment (ICES)
+        ↓
+March :             TAC Recommendation
+        ↓
+15 Oct-15 MArch:         Fishing Season Opens
+```
+
+::: {.callout-important}
+**Critical Window:** Only a few weeks from survey to TAC advice!
+
+This tight timeline requires winter survey timing.
+:::
+
+---
+
+## Case Example: 2024 Winter Survey {.smaller}
+
+**Recent Survey Results**
+
+![](images/capelin_2024_distribution.png){fig-align="center" width="60%"}
+
+**Survey Period:** January 20 - February 5, 2024
+
+**Findings:**
+
+- High concentrations south of Iceland
+- Good weather conditions (most years not this lucky!)
+- Estimated spawning stock: ~1.2 million tonnes
+- Strong 2022 year class detected
+
+---
+
+## Historical Lessons {.smaller}
+
+**What We've Learned**
+
+**1990s Collapse:**
+
+- Survey timing remained consistent
+- Detected stock collapse early
+- Enabled precautionary management
+
+**2000s Recovery:**
+
+- Consistent surveys tracked recovery
+- Timing allowed assessment of rebuilding
+- Management adjusted as stock grew
+
+::: {.fragment}
+**Key Lesson:** Consistent winter survey timing has been crucial for detecting both collapses and recoveries
+:::
+
+---
+
+## Climate Change Implications {.smaller}
+
+**Adapting to Changing Conditions**
+
+**Observed Changes:**
+
+- Warming ocean temperatures around Iceland
+- Earlier spawning in some years
+- Northward shift in distribution
+- Changes in plankton phenology
+
+**Survey Adaptations:**
+
+- Monitoring for timing shifts
+- Flexible spatial coverage
+- Extended survey period option
+- Integration with ocean monitoring
+
+![](images/iceland_warming_trend.png){fig-align="center" width="55%"}
+
+---
+
+## Alternative Approaches? {.smaller}
+
+**Could We Survey at Other Times?**
+
+:::: {.columns}
+::: {.column width="50%"}
+**Summer Survey:**
+
+❌ Dispersed distribution
+
+❌ Lower catchability
+
+❌ Too early for assessment cycle
+
+✓ Good for immature capelin
+:::
+
+::: {.column width="50%"}
+**Autumn Survey:**
+
+❌ Very wide distribution
+
+❌ Mixed maturity stages
+
+❌ More difficult logistics
+
+✓ Earlier warning signal
+:::
+::::
+
+::: {.callout-tip}
+**Conclusion:** Winter remains optimal despite challenges
+:::
+
+---
+
+## Key Recommendations {.smaller}
+
+**Best Practices for Capelin Surveys**
+
+1. **Maintain Winter Timing**
+   - January-February optimal window
+   - Spawning migration = high catchability
+   - Aligns with assessment needs
+
+2. **Adaptive Spatial Coverage**
+   - Monitor environmental conditions
+   - Adjust coverage for distribution shifts
+   - Real-time survey decisions
+
+3. **Consistent Methodology**
+   - Same frequency (38 kHz)
+   - Similar transect design
+   - Standardized data processing
+
+4. **Integrate Multiple Data Sources**
+   - Summer surveys for recruitment
+   - Fishery data for validation
+   - Environmental monitoring
+
+---
+
+## Future Developments {.smaller}
+
+**Innovations on the Horizon**
+
+**Technology:**
+
+- Autonomous vehicles (Saildrones, gliders)
+- Continuous monitoring potential
+- Satellite-derived environmental data
+- AI for target identification
+
+**Methodology:**
+
+- Improved target strength models
+- Better handling of mixed schools
+- Integration with ecosystem models
+
+::: {.callout-note}
+Even with new technology, winter spawning migration will likely remain the optimal sampling window
+:::
+
+---
+
+## Conclusions {.smaller}
+
+**Why Winter Survey Timing Works for Capelin**
+
+✓ **Biological:** High aggregation during spawning migration
+
+✓ **Technical:** Better acoustic detection, clear target separation
+
+✓ **Assessment:** Timely data for management decisions
+
+✓ **Practical:** Focused survey area (despite weather challenges)
+
+✓ **Proven:** 45+ years of successful time series
+
+::: {.fragment}
+**The Bottom Line:**
+
+Winter acoustic surveys of pre-spawning capelin provide the most reliable abundance estimates for management, despite operational challenges.
+:::
+
+---
+
+## Questions & Discussion
+
+**Thank you for your attention!**
+
+![](images/hafro.png){fig-align="center" width="30%"}
+
+Contact: [teresa.silva@hafogvatn.is]
+
+*Questions about capelin survey timing?*
+
+---
+
+## Developing a Sampling Strategy {.smaller}
+
+**Step-by-Step Approach**
+
+1. **Define Objectives**
+   - What population metrics are needed?
+   - What precision is required?
+
+2. **Review Historical Data**
+   - Past survey results
+   - Fishery data patterns
+   - Long-term trends
+
+3. **Assess Constraints**
+   - Budget and resources
+   - Vessel availability
+   - Weather windows
+
+4. **Pilot Studies**
+   - Test timing alternatives
+   - Evaluate data quality
+   - Refine approach
+
+---
+
+## Multi-Year Consistency vs. Adaptive Design {.smaller}
+
+:::: {.columns}
+::: {.column width="50%"}
+**Consistency**
+
+✓ Time series continuity
+
+✓ Trend detection
+
+✓ Reduced bias
+
+⚠ May miss optimal timing
+:::
+
+::: {.column width="50%"}
+**Adaptive Design**
+
+✓ Responds to changes
+
+✓ Optimizes data quality
+
+✓ Cost-effective
+
+⚠ Complicates trend analysis
+:::
+::::
+
+::: {.callout-tip}
+**Best Practice:** Maintain core timing while allowing adaptive components
+:::
+
+---
+
+## Quality Control & Validation
+
+**Ensuring Representative Sampling**
+
+- **Real-time Monitoring**
+  - Coverage evaluation
+  - Distribution patterns
+  - Density estimates
+
+- **Post-Survey Analysis**
+  - Compare to fishery data
+  - Historical consistency checks
+  - Spatial coverage assessment
+
+![](images/survey_coverage_map.png){fig-align="center" width="50%"}
+
+---
+
+## Climate Change Considerations {.smaller}
+
+**Adapting to Changing Conditions**
+
+- **Observed Shifts**
+  - Earlier spawning timing
+  - Poleward distribution shifts
+  - Extended feeding seasons
+
+::: {.fragment}
+**Implications for Surveys:**
+
+- Need for flexible timing
+- Expanded spatial coverage
+- More frequent reviews of survey protocols
+:::
+
+![](images/climate_shift_diagram.png){fig-align="center" width="55%"}
+
+---
+
+## Future Directions {.smaller}
+
+**Innovations in Survey Design**
+
+:::: {.columns}
+::: {.column width="50%"}
+**Technology**
+
+- Autonomous vehicles
+- Continuous monitoring
+- Satellite remote sensing
+- eDNA sampling
+:::
+
+::: {.column width="50%"}
+**Methodology**
+
+- Machine learning for optimal timing
+- Real-time adaptive surveys
+- Integrated multi-platform data
+:::
+::::
+
+::: {.callout-note}
+These advances may reduce importance of "perfect" timing
+:::
+
+---
+
+## Key Recommendations {.smaller}
+
+**Best Practices for Sampling Timing**
+
+1. **Know Your Species**
+   - Study life history and behavior
+   - Understand migration patterns
+
+2. **Consider Multiple Factors**
+   - Biological, environmental, and operational
+   - Balance ideal vs. practical
+
+3. **Maintain Consistency**
+   - Build reliable time series
+   - Document decisions
+
+4. **Stay Adaptive**
+   - Monitor for changes
+   - Review and update protocols
+
+5. **Collaborate**
+   - Coordinate with other surveys
+   - Share data and insights
+
+---
+
+## Conclusions {.smaller}
+
+**Strategic Timing is Critical**
+
+- No "one-size-fits-all" solution
+- Requires species-specific knowledge
+- Must balance multiple competing factors
+- Consistency enables trend detection
+- Flexibility allows adaptation to change
+
+::: {.fragment}
+**The Bottom Line:**
+
+Optimal sampling timing maximizes data quality while working within practical constraints, ultimately supporting sustainable fisheries management.
+:::
+
+---
+
+## Questions & Discussion
+
+**Thank you for your attention!**
+
+![](images/hafro.png){fig-align="center" width="30%"}
+
+Contact: [your.email@example.com]
+
+---
+
+## References {.smaller}
+
+**Key Literature**
+
+- Vilhjálmsson, H. (2002). Capelin (*Mallotus villosus*) in the Iceland–East Greenland–Jan Mayen ecosystem. ICES Journal of Marine Science.
+
+- Gjøsæter, H., et al. (2009). Assessment methodology for Icelandic capelin. ICES Cooperative Research Report.
+
+- MFRI (Marine and Freshwater Research Institute). Annual capelin acoustic survey reports.
+
+- ICES. (2024). Capelin in subareas 5 and 14 and Division 2.a west of 5°W (Iceland and Faroes grounds, East Greenland, Jan Mayen area).
+
+::: {.callout-note}
+Historical survey data available from MFRI and ICES databases
+:::
+
+---
+
+## Acknowledgments
+
+**Thank You**
+
+- Marine and Freshwater Research Institute (MFRI/Hafró)
+- Research vessel *Árni Friðriksson* crew
+- Icelandic capelin survey teams
+- ICES Working Group on Widely Distributed Stocks
+
+![](images/hafro.png){fig-align="center" width="25%"}
+
+*Sustainable management through scientific excellence*
